# vcpkg-port-example

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json
include/: common.h
src/: common.cpp
vcpkg-overlay/port-example/: portfile.cmake  usage  vcpkg.json
