CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
SET(CMAKE_CXX_STANDARD 20)
PROJECT(port-example)
SET(PROJECT_VERSION 0.0.1)

FIND_PACKAGE(fmt CONFIG REQUIRED)

INCLUDE_DIRECTORIES(include)
SET(SRCS)
AUX_SOURCE_DIRECTORY(src SRCS)

ADD_LIBRARY(${PROJECT_NAME} ${SRCS})
ADD_LIBRARY(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} fmt::fmt)

INSTALL(TARGETS ${PROJECT_NAME}
        EXPORT ${PROJECT_NAME}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(DIRECTORY include/ DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")